--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.69.6",
     "react-native-safe-area-context": "^4.3.1",
     "typescript": "^4.6.3",
-    "expo-linear-gradient": "~11.4.0"
+    "expo-linear-gradient": "~11.4.0",
+    "react-native-reanimated": "~2.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
