--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-safe-area-context": "^4.3.1",
     "typescript": "^4.6.3",
     "expo-linear-gradient": "~11.4.0",
-    "react-native-reanimated": "~2.9.1"
+    "react-native-reanimated": "~2.9.1",
+    "lottie-react-native": "5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
