--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
     "expo": "~46.0.13",
+    "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
+    "lottie-react-native": "5.1.3",
     "react": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-safe-area-context": "^4.3.1",
-    "typescript": "^4.6.3",
-    "expo-linear-gradient": "~11.4.0",
     "react-native-reanimated": "~2.9.1",
-    "lottie-react-native": "5.1.3"
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
