--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~46.0.13",
     "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.7",
     "lottie-react-native": "5.1.3",
     "react": "18.0.0",
     "react-native": "0.69.6",
