--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "expo-updates": "~0.14.7",
     "lottie-react-native": "5.1.3",
     "react": "18.0.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
-    "typescript": "^4.6.3"
+    "react-native-web-lottie": "^1.4.4",
+    "typescript": "^4.6.3",
+    "webpack-dev-server": "^4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
