--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4",
     "@react-navigation/bottom-tabs": "^6.4.3",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
+    "@types/react-redux": "^7.1.25",
     "expo": "~46.0.13",
     "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
@@ -26,8 +29,11 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
     "react-native-web-lottie": "^1.4.4",
+    "react-navigation-fluid-transitions": "^0.3.2",
+    "react-redux": "^8.0.5",
     "typescript": "^4.6.3",
     "webpack-dev-server": "^4.11.1"
   },
